--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,9 @@ web:
 
 db:
   env_file:
-    - .env
+    - settings.env
   image: mysql:5.7
   container_name: dev.ewascatalog_db
+  volumes:
+    - ${FILE_DIR}:/files
+    - .:/code
