--- a/webserver/ewascatalog.conf
+++ b/webserver/ewascatalog.conf
@@ -2,6 +2,7 @@ server {
 
     listen 80;
     charset utf-8;
+    client_max_body_size 1000M;
 
     location /media {
         autoindex on;
@@ -18,6 +19,10 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout       600;
+        proxy_send_timeout          600;
+        proxy_read_timeout          600;
+        send_timeout                600;
     }
 
 }
